feat: 전체적인 골격과 기본 설정파일 추가
- Merged from feature/initial-settings to main)
- Squashed commit of the following:

commit 3b664330f1e2175c2488ad2612b010262aac8f35
Author: Tublet <fazomo@tublet.io>
Date:   Thu May 26 10:44:57 2022 +0900

    chore(common): turbo.json 수정

commit 9381a703559aceef26b6d577c8c84b96d666f2b0
Author: Tublet <fazomo@tublet.io>
Date:   Thu May 26 09:27:54 2022 +0900

    feat(admin): 기초적인 스캐폴딩 추가

commit e9716a8e623054a4e9cb448d56ee9db10500f300
Author: Tublet <fazomo@tublet.io>
Date:   Wed May 25 17:48:38 2022 +0900

    chore(global): eslint 설정 tublet-config에 편입

commit 740b3bc25adc76de03c83da73278102ab0540f1f
Author: Tublet <fazomo@tublet.io>
Date:   Wed May 25 17:42:47 2022 +0900

    chore(global): 골조 생성용 .gitkeep 추가

commit 271711aa582032ca23445d5277f8c775d1d2c6ab
Author: Tublet <fazomo@tublet.io>
Date:   Wed May 25 17:32:34 2022 +0900

    chore(global): 패키지명 변경 등

    - 미리 구상한 구조에 맞게 gitkeep 추가
    - 패키지명에 의존하는 각종 설정값 수정

commit 56d515edb2857b20eb65277bd53e84b0b26a9834
Author: Tublet <fazomo@tublet.io>
Date:   Wed May 25 17:07:44 2022 +0900

    chore(global): 테스트 관련 라이브러리 설치 및 초기 설정파일 추가

--- a/turbo.json
+++ b/turbo.json
@@ -1,14 +1,24 @@
 {
+  "$schema": "https://turborepo.org/schema.json",
+  "baseBranch": "origin/main",
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**"]
     },
     "lint": {
-      "outputs": []
+      "cache": false
     },
     "dev": {
       "cache": false
+    },
+    "test": {
+      "dependsOn": ["^build"],
+      "outputs": ["coverage/**"]
+    },
+    "cypress": {
+      "dependsOn": ["^build"],
+      "outputs": []
     }
   }
 }
