--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "turborepo-basic-shared",
-  "version": "0.0.0",
+  "name": "tublet-fe",
+  "version": "0.0.1",
   "private": true,
   "workspaces": [
     "apps/*",
@@ -10,11 +10,29 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
+    "test": "turbo run test",
+    "test:watch": "turbo run test:watch",
+    "test:coverage": "jest --coverage",
+    "cypress": "turbo run cypress",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.2.0",
+    "@testing-library/react-hooks": "^8.0.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/jest": "^27.5.1",
+    "cypress": "^9.7.0",
+    "esbuild": "^0.14.39",
+    "esbuild-jest": "^0.5.0",
+    "eslint": "^8.16.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "prettier": "latest",
-    "turbo": "latest"
+    "ts-jest": "^28.0.3",
+    "ts-node": "^10.8.0",
+    "turbo": "latest",
+    "typescript": "^4.7.2"
   },
   "engines": {
     "npm": ">=7.0.0",
