--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    needs:
+      - lint
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -41,6 +43,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    needs:
+      - build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
