--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "esbuild": "^0.14.39",
     "esbuild-jest": "^0.5.0",
     "eslint": "^8.16.0",
+    "eslint-config-custom": "*",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "prettier": "latest",
