update build config

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,6 @@
   "github": {
     "enabled": false,
     "silent": true
-  }
+  },
+  "builds": [{ "src": "./apps/admin/.next", "use": "@vercel/static" }]
 }
