--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,9 +6,34 @@ on:
     branches: [main]
 
 jobs:
+  cache_dependencies_job:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          cache: yarn
+      - name: Create cache key
+        id: lockfile_hash_key
+        run: echo "::set-output name=hash::${{ hashFiles('package-lock.json') }}"
+      - name: Cache node_modules
+        uses: actions/cache@v2
+        id: cache_dependencies
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+      - name: Install dependencies
+        if: steps.cache_dependencies.outputs.cache-hit == ''
+        run: yarn install --frozen-lockfile
+    outputs:
+      cache_key: ${{ steps.lockfile_hash_key.outputs.hash }}
+
   lint:
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    needs: cache_dependencies_job
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -17,41 +42,71 @@ jobs:
         with:
           node-version: 16.x
           cache: yarn
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Lint code
-        run: yarn lint
-  build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    needs:
-      - lint
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Check dependency cache
+        uses: actions/cache@v2
+        id: cache_dependencies
         with:
-          node-version: 16.x
-          cache: yarn
-      - name: Install dependencies
+          path: ${{ env.CACHED_DEPENDENCY_PATHS }}
+          key: ${{ needs.cache_dependencies_job.outputs.cache_key }}
+      - name: Install dependencies if not cache-hit
+        if: steps.cache_dependencies.outputs.cache-hit == ''
         run: yarn install --frozen-lockfile
-      - name: Build code
-        run: yarn build
-  test:
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-    needs:
-      - build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-          cache: yarn
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
-      - name: Test code
-        run: yarn test
+      - name: Echo cache hit
+        if: steps.cache_dependencies.outputs.cache-hit
+        run: echo "HIT!"
+
+#      - name: Install dependencies
+#        run: yarn install --frozen-lockfile
+#      - name: Lint code
+#        run: yarn lint
+
+
+#  lint:
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 15
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#      - name: Setup Node.js
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 16.x
+#          cache: yarn
+#      - name: Install dependencies
+#        run: yarn install --frozen-lockfile
+#      - name: Lint code
+#        run: yarn lint
+#  build:
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 15
+#    needs:
+#      - lint
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#      - name: Setup Node.js
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 16.x
+#          cache: yarn
+#      - name: Install dependencies
+#        run: yarn install --frozen-lockfile
+#      - name: Build code
+#        run: yarn build
+#  test:
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 15
+#    needs:
+#      - build
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#      - name: Setup Node.js
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 16.x
+#          cache: yarn
+#      - name: Install dependencies
+#        run: yarn install --frozen-lockfile
+#      - name: Test code
+#        run: yarn test
