--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/cache@v2
         id: cache_dependencies
         with:
-          path: ${{ env.CACHED_DEPENDENCY_PATHS }}
+          path: "**/node_modules"
           key: ${{ needs.cache_dependencies_job.outputs.cache_key }}
       - name: Install dependencies if not cache-hit
         if: steps.cache_dependencies.outputs.cache-hit == ''
