add build and test job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,8 @@ on:
     # By default, a workflow only runs when a pull_request event's activity type is opened, synchronize, or reopened
     branches: [main]
 
+env:
+  NODE_MODULES_PATH: "**/node_modules"
 jobs:
   cache_dependencies_job:
     runs-on: ubuntu-latest
@@ -22,7 +24,7 @@ jobs:
         uses: actions/cache@v2
         id: cache_dependencies
         with:
-          path: "**/node_modules"
+          path: ${{ env.NODE_MODULES_PATH }}
           key: ${{ steps.lockfile_hash_key.outputs.hash }}
       - name: Install dependencies
         if: steps.cache_dependencies.outputs.cache-hit == ''
@@ -46,65 +48,54 @@ jobs:
         uses: actions/cache@v2
         id: cache_dependencies
         with:
-          path: "**/node_modules"
+          path: ${{ env.NODE_MODULES_PATH }}
           key: ${{ needs.cache_dependencies_job.outputs.cache_key }}
       - name: Install dependencies if not cache-hit
         if: steps.cache_dependencies.outputs.cache-hit == ''
         run: yarn install --frozen-lockfile
-      - name: Echo cache hit
-        if: steps.cache_dependencies.outputs.cache-hit
-        run: echo "HIT!"
-#      - name: Install dependencies
-#        run: yarn install --frozen-lockfile
-#      - name: Lint code
-#        run: yarn lint
+      - name: Lint code
+        run: yarn lint
 
-#  lint:
-#    runs-on: ubuntu-latest
-#    timeout-minutes: 15
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#      - name: Setup Node.js
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: 16.x
-#          cache: yarn
-#      - name: Install dependencies
-#        run: yarn install --frozen-lockfile
-#      - name: Lint code
-#        run: yarn lint
-#  build:
-#    runs-on: ubuntu-latest
-#    timeout-minutes: 15
-#    needs:
-#      - lint
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#      - name: Setup Node.js
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: 16.x
-#          cache: yarn
-#      - name: Install dependencies
-#        run: yarn install --frozen-lockfile
-#      - name: Build code
-#        run: yarn build
-#  test:
-#    runs-on: ubuntu-latest
-#    timeout-minutes: 15
-#    needs:
-#      - build
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v3
-#      - name: Setup Node.js
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: 16.x
-#          cache: yarn
-#      - name: Install dependencies
-#        run: yarn install --frozen-lockfile
-#      - name: Test code
-#        run: yarn test
+  build:
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    needs:
+      - lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          cache: yarn
+      - name: Check dependency cache
+        uses: actions/cache@v2
+        id: cache_dependencies
+        with:
+          path: ${{ env.NODE_MODULES_PATH }}
+          key: ${{ needs.cache_dependencies_job.outputs.cache_key }}
+      - name: Build code
+        run: yarn build
+
+  test:
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    needs:
+      - build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          cache: yarn
+      - name: Check dependency cache
+        uses: actions/cache@v2
+        id: cache_dependencies
+        with:
+          path: ${{ env.NODE_MODULES_PATH }}
+          key: ${{ needs.cache_dependencies_job.outputs.cache_key }}
+      - name: Test code
+        run: yarn test
