--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     needs:
+      - cache_dependencies_job
       - lint
     steps:
       - name: Checkout code
@@ -82,6 +83,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     needs:
+      - cache_dependencies_job
       - build
     steps:
       - name: Checkout code
