--- a/.github/workflows/ci2.yml
+++ b/.github/workflows/ci2.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI2
 
 on:
   pull_request:
@@ -25,7 +25,7 @@ jobs:
         uses: actions/cache@v3
         id: cache_dependencies
         with:
-          path: ${{ steps.yarn_cache_dir_path.outpus.cache_dir }}
+          path: ${{ steps.yarn_cache_dir_path.outputs.cache_dir }}
           key: ${{ steps.yarn_lock_cache.outputs.hash }}
           restore-keys: |
             ${{ runner.os }}-yarn-
